--- a/templates/polls/index.html
+++ b/templates/polls/index.html
@@ -1,6 +1,6 @@
-{% if latest_poll_list %}
+{% if poll_list %}
     <ul>
-    {% for poll in latest_poll_list %}
+    {% for poll in poll_list %}
         <li><a href="/polls/{{ poll.id }}">{{ poll.question }}</a></li>
     {% endfor %}
     </ul>
