--- a/templates/polls/results.html
+++ b/templates/polls/results.html
@@ -3,6 +3,7 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
+<p>投票しました。</p>
 
 {% if poll.choice_set.all %}
 <form action="/polls/{{ poll.id }}/vote/" method="post">
